--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -39,7 +39,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Effort, Version=1.0.0.0, Culture=neutral, PublicKeyToken=6a46696d54971e6d, processorArchitecture=MSIL">
-      <HintPath>..\packages\Effort.EF6.1.3.2\lib\net45\Effort.dll</HintPath>
+      <HintPath>..\packages\Effort.EF6.1.3.3\lib\net45\Effort.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
@@ -67,6 +67,8 @@
     <Compile Include="TestSendSMSHostContext.cs" />
     <Compile Include="DaySummaryTest.cs" />
     <Compile Include="ForeverSummaryTest.cs" />
+    <Compile Include="DayChartDataTest.cs" />
+    <Compile Include="WeekChartDataTest.cs" />
     <Compile Include="WeekSummaryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
