--- a/SendSMSHost/SendSMSHost.csproj
+++ b/SendSMSHost/SendSMSHost.csproj
@@ -234,6 +234,10 @@
     <Compile Include="Migrations\201803281918166_initial.Designer.cs">
       <DependentUpon>201803281918166_initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201804041329086_import_without_contact.cs" />
+    <Compile Include="Migrations\201804041329086_import_without_contact.Designer.cs">
+      <DependentUpon>201804041329086_import_without_contact.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Contact.cs" />
     <Compile Include="Models\DTO.cs" />
@@ -243,7 +247,6 @@
     <Compile Include="Models\Sms.cs" />
     <Compile Include="Models\Status.cs" />
     <Compile Include="Models\Factory\ChartDataFactory.cs" />
-    <Compile Include="Models\Factory\SummaryFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignalR\ServerSentEventsStartup.cs" />
     <Compile Include="SignalR\ServerSentEventsHub.cs" />
@@ -337,6 +340,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201803281918166_initial.resx">
       <DependentUpon>201803281918166_initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804041329086_import_without_contact.resx">
+      <DependentUpon>201804041329086_import_without_contact.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
