--- a/SendSMSHost/SendSMSHost.csproj
+++ b/SendSMSHost/SendSMSHost.csproj
@@ -238,6 +238,10 @@
     <Compile Include="Migrations\201804041329086_import_without_contact.Designer.cs">
       <DependentUpon>201804041329086_import_without_contact.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201804141502595_IndexLog.cs" />
+    <Compile Include="Migrations\201804141502595_IndexLog.Designer.cs">
+      <DependentUpon>201804141502595_IndexLog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Contact.cs" />
     <Compile Include="Models\DTO.cs" />
@@ -293,14 +297,17 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
+    <Content Include="Scripts\Chart-2.7.1.min.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.js" />
     <Content Include="Scripts\jquery.signalR-2.2.3.js" />
     <Content Include="Scripts\jquery.signalR-2.2.3.min.js" />
+    <Content Include="Scripts\Vue-ChartJs-3.3.1.min.js" />
     <Content Include="ViewModels\Dashboard\App.js" />
     <Content Include="ViewModels\Dashboard\SignalR.js" />
+    <Content Include="ViewModels\Home\Ajax.js" />
     <Content Include="ViewModels\Home\App.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -309,7 +316,6 @@
     <Content Include="Scripts\respond.matchmedia.addListener.js" />
     <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
     <Content Include="Scripts\respond.min.js" />
-    <Content Include="SignalR\SignalR-ServerSentEvents.js" />
     <Content Include="Scripts\vue.js" />
     <Content Include="ViewModels\Home\SignalR.js" />
     <Content Include="Web.config" />
@@ -343,6 +349,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201804041329086_import_without_contact.resx">
       <DependentUpon>201804041329086_import_without_contact.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804141502595_IndexLog.resx">
+      <DependentUpon>201804141502595_IndexLog.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
