--- a/SendSMSHost/SendSMSHost.csproj
+++ b/SendSMSHost/SendSMSHost.csproj
@@ -305,6 +305,7 @@
     <Content Include="Scripts\jquery.signalR-2.2.3.js" />
     <Content Include="Scripts\jquery.signalR-2.2.3.min.js" />
     <Content Include="Scripts\Vue-ChartJs-3.3.1.min.js" />
+    <Content Include="ViewModels\Dashboard\Ajax.js" />
     <Content Include="ViewModels\Dashboard\App.js" />
     <Content Include="ViewModels\Dashboard\SignalR.js" />
     <Content Include="ViewModels\Home\Ajax.js" />
