--- a/SendSMSHost/packages.config
+++ b/SendSMSHost/packages.config
@@ -36,6 +36,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="popper.js" version="1.14.0" targetFramework="net461" />
   <package id="QRCoder" version="1.3.2" targetFramework="net461" />
   <package id="Respond" version="1.4.2" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.0" targetFramework="net461" />
